fix: search on mobile and make url relative (#172)
Fixes #171

* fix: search on mobile and make url relative

* fix: add checkInput() function for `scroll` listener too

Sometimes there are some unknown `scroll` events on mobile...

* Use contains()

* chore: relative-url.html doesn't expect file names starting with a slash

* fix: Only react to window resizes if nav toggle is no longer visible

* chore: Remove console.log() call

* refactor: replace resize listener with media query

* chore: update resources folder

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -441,6 +441,7 @@ $fofPoster: url({{ $fofPoster }});
     $enableLunrSearch: false;
 {{ end }}
 
+
 // Responsive
 
 @if ($postWidth > $listWidth) {
@@ -450,6 +451,9 @@ $fofPoster: url({{ $fofPoster }});
 }
 
 @import "base/max-width";
+:root {
+    --max-width: #{$maxWidth};
+}
 @import "base/responsive";
 
 
